Remove GWT references (#2987)
#### Rationale
We're completely eliminating GWT from our codebase so there's no need to
have any test references to it.

#### Related Pull Requests
- https://github.com/LabKey/platform/pull/7659

#### Changes
- Get rid of some locators
- Expunge some GWT-specific workarounds
- Eliminate some lint